@@ -6,6 +6,10 @@ cdebconf (0.134) UNRELEASED; urgency=low
   * Skip error questions when going back in text and newt frontends.
     (Closes: #487691)
 
+  [ Colin Watson ]
+  * When receiving a new template with DATA, ensure that the corresponding
+    question is registered to that template.
+
  -- Jérémy Bobbio <lunar@debian.org>  Tue, 05 Aug 2008 14:10:24 +0000
 
 cdebconf (0.133) unstable; urgency=low
